--- a/components/pages/home/Projects.module.scss
+++ b/components/pages/home/Projects.module.scss
@@ -50,6 +50,11 @@
             }
             img{
                 transition: $link-trans;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
             }
             .desc, .linkBtn{
                 color: $color-light-3;
