--- a/components/pages/home/Collaboration.module.scss
+++ b/components/pages/home/Collaboration.module.scss
@@ -27,7 +27,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
-                filter: grayscale(1);
+                // filter: grayscale(1);
             }
             @include md-p{
                 width: 120px;
