--- a/components/pages/home/Projects.module.scss
+++ b/components/pages/home/Projects.module.scss
@@ -1,86 +1,89 @@
 @import "styles/themes";
 
-.projects{
-    @include layout-container-lg;
+.projects {
+  @include layout-container-lg;
 
-    margin-top: -8em;
-    margin-bottom: 2em;
-    text-align: center;
-    @include md-p{
-        margin-top: -16em;
+  margin-top: -8em;
+  margin-bottom: 2em;
+  text-align: center;
+  @include md-p {
+    margin-top: -16em;
+  }
+  @include md-t {
+    margin-top: -14em;
+  }
+  .title {
+    color: $color-primary;
+    font-size: 2em;
+    margin-bottom: 0;
+  }
+  .subtitle {
+    color: $color-secondary;
+    font-weight: 300;
+    font-size: 18px;
+    a {
+      color: $color-primary;
+      text-decoration: underline;
     }
-    @include md-t{
-        margin-top: -14em;
-    }
-    .title{
-        color: $color-primary;
-        font-size: 2em;
-        margin-bottom: 0;
-    }
-    .subtitle{
-        color: $color-secondary;
+  }
+  .wrapper {
+    margin-top: 3em;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-gap: 24px;
+    .project {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      position: relative;
+      height: 232px;
+      border-radius: 16px;
+      overflow: hidden;
+      background-color: $color-primary;
+      padding: 2em;
+      transition: $link-trans;
+      @include md-p {
+        height: 220px;
+      }
+      img {
+        transition: $link-trans;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+      .desc,
+      .linkBtn {
+        color: $color-light-3;
+        transition: $link-trans;
+      }
+      .linkBtn {
         font-weight: 300;
-        font-size: 18px;
-        a{
-            color: $color-primary;
-            text-decoration: underline;
+        padding: 0.5em 1.6em;
+        border: 1px solid $color-primary;
+        border-radius: 50px;
+        color: $color-light-3;
+        transition: $link-trans;
+        &:hover {
+          background-color: $color-primary;
         }
-    }
-    .wrapper{
-        margin-top: 3em;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-        flex-wrap: wrap;
-        justify-content: center;
-        grid-gap: 24px;
-        .project{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            position: relative;
-            height: 232px;
-            border-radius: 16px;
-            overflow: hidden;
-            background-color: $color-primary;
-            padding: 2em;
-            transition: $link-trans;
-            @include md-p{
-                height: 220px;
-            }
-            img{
-                transition: $link-trans;
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                object-position: center;
-            }
-            .desc, .linkBtn{
-                color: $color-light-3;
-                transition: $link-trans;
-            }
-            .linkBtn{
-                font-weight: 300;
-                padding: .5em 1.6em;
-                border: 1px solid $color-primary;
-                border-radius: 50px;
-                color: $color-light-3;
-                transition: $link-trans;
-                &:hover{
-                    background-color: $color-primary;
-                }
-            }
-            &:hover{
-                img{
-                    filter: brightness(0.1);
-                    opacity: .75;
-                }
-                .desc, .linkBtn{
-                    position: relative;
-                    z-index: 10;
-                }
-            }
+      }
+      &:hover {
+        img {
+          transform: scale(1.1);
+          filter: brightness(0.1);
+          opacity: 0.8;
         }
+        .desc,
+        .linkBtn {
+          position: relative;
+          z-index: 10;
+        }
+      }
     }
+  }
 }
