--- a/styles/themes/_variables.scss
+++ b/styles/themes/_variables.scss
@@ -1,14 +1,13 @@
-$color-primary: #4633C5;
-$color-secondary: #6C79DC;
+$color-primary: #3e30ff;
+$color-secondary: #101850;
 
 $color-light-1: #ffffff;
 $color-light-2: #f7f7f7;
-$color-light-3: #FEFDFC;
+$color-light-3: #fefdfc;
 
 $color-dark-1: #313131;
 $color-dark-2: #383838;
 $color-dark-3: #525252;
-
 
 $font-weight-thin: 100;
 $font-weight-light: 300;
@@ -17,4 +16,4 @@ $font-weight-bold: 700;
 $font-weight-black: 900;
 
 //transitions
-$link-trans: 0.3s; 
+$link-trans: 0.3s;
